fix: Change grid spacing to resize automatically

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -159,7 +159,7 @@ label {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto auto;
     grid-template-areas:
     "label"
     "input";
